# api-conversao-moedas

./: .gitignore  README.md  main.py  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: conversor.py
api/v2/: api.py
api/v2/endpoints/: conversor.py
api/v2/endpoints/responses/: conversor_responses.py
schemas/: conversor_schemas.py
services/: conversor_moedas.py
