[tool.poetry]
name = "api-conversor-moedas"
version = "0.1.0"
description = ""
authors = ["lazzarusxd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
